2010-06-07 Homer Xing <homer.xing@gmail.com>

    * Fix bug: newline appears in menuitems of default pane

2010-06-05 Homer Xing <homer.xing@gmail.com>

    * Add software items for Archlinux

2010-06-05 SHANG Yuanchun <idealities@gmail.com>

    * Add support for installing software on Archlinux
    * Fix bugs in class PACMAN

2010-06-04 Homer Xing <homer.xing@gmail.com>

    * Improve architecture. Do not need to manually update AILURUS_VERSION.
    * Add dbus daemon version. Check dbus daemon status by reading version.
    * Provide a dialog to restart daemon.
    * Improve code. Express all of Mint, YLMF, Deepin as UBUNTU_DERIV.
    * Improve code. Do not import lib twice.
    * Check wrong code name in sources list.
    * Do not check colorful BASH PS1 on Deepin Linux because BASH PS1 is colorful already.
    * Do not try to read Firefox preference location if Firefox is not installed.
    * Fix bug: state is not refeshed after running quick setup.
    * Support proxy server.

2010-06-02 Homer Xing <homer.xing@gmail.com>

    * Do not interrupt installation process if download() failed
    * Fix bug: TempOwn fails if directory does not exist
    * Handle the situation such that information function returns []

2010-06-01 Homer Xing <homer.xing@gmail.com>

    * Move stardict dictionaries into computer doctor pane
    * Move gcompris voice, childsplay voice into computer doctor pane

2010-05-31 HAN Haofu<gtxx3600@gmail.com>

    * Move all apps in native_apps.py to native_apps.cfg.
    * Move app's __doc__ and detail to support/strings.py.
    * Fix bug: In clean_up_pane, TextView under 'Reclaim memory' button is editable. 

2010-05-31 Homer Xing <homer.xing@gmail.com>

    * Improve desktop environment detection.

2010-05-30 MA Yue <velly.empire@gmail.com>

    * Add the Screensaver Panel

2010-05-30 Homer Xing <homer.xing@gmail.com>

    * Add a preference menuitem to choose default pane.
    * Re-enable Oracle repository.